# mcp-sql-eval-sep-13

./: .devdbrc  README.md  cricket_analytics.db  db.py  main.py  model.py  pyproject.toml  schema.py  sql_agent.py
