[project]
name = "practice-mcp-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
]
